--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,58 @@ body {
     color: white;
 }
 
+
+#main {
+    width: 100vw;
+    height: 90vh;
+    margin-top: 5em;
+    display: flex;
+}
+
+#main-nav {
+    margin: 21vh auto;
+    padding: 13px;
+    width: 144px;
+    height: 9em;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.main-nav-link {
+    cursor: pointer;
+    text-align: center;
+    margin: 0.25em auto;
+    font-size: 2em;
+    opacity: 0%;
+}
+
+#projects-div {
+    margin: auto;
+    width: 80vw;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.project-div {
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 1.5em;
+    transition: all 200ms ease-in-out;
+    &:hover {
+        transform: scale(1.3);
+    }
+    & > a {
+        width: 100%;
+        height: 100%;
+        & > img {
+            width: 110%;
+            height: 110%;
+        }
+    }
+}
+
 #portrait-div {
     width: 100vw;
     height: 100vh;
@@ -16,8 +68,8 @@ body {
     margin: auto;
     position: relative;
     padding-left: 16em;
-    bottom: 0;
-    opacity: 55%;
+    bottom: 10em;
+    opacity: 79%;
     min-height: 1037px;
     transition: transform 3000ms linear, opacity 3000ms linear;
 }
@@ -47,13 +99,18 @@ a.nav-link{
 }
 .nav-link-icon {
     cursor: pointer;
+    opacity: 0%;
     max-width: 4px;
     max-height: 4px;
-    transition: all 5000ms linear;
-}
-.show-icon {
-    min-width: 32px;
-    min-height: 32px;
+    
+    &.show-icon {
+        transition: all 200ms ease-in-out;
+        min-width: 32px;
+        min-height: 32px;
+        &:hover {
+            transform: scale(1.3);
+        }
+    }
 }
 
 .land-heading {
