update about and style contact

--- a/src/style.scss
+++ b/src/style.scss
@@ -142,6 +142,13 @@ a.nav-link{
     line-height: 1.3em;
 }
 
+/* contact page */
+#contact-form-div {
+    margin: 6em auto;
+    font-size: 1.3em;
+    line-height: 1.3em;
+}
+
 
 
 
