--- a/src/style.scss
+++ b/src/style.scss
@@ -336,6 +336,10 @@ a.nav-link{
         top: 40%;
         left: 28%;
     }
+    .project-banner.thoughtlogue {
+        top: 40%;
+        left: 28%;
+    }
 }
 
 
