--- a/src/style.scss
+++ b/src/style.scss
@@ -87,6 +87,10 @@ body {
         top: 40%;
         left: 30%;
     }
+    &.thoughtlogue {
+        top: 40%;
+        left: 30%;
+    }
 
 }
 .project-banner-text {
